// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Component has link to create a new request for Requester when no open record exists 1`] = `
<div
  class="css-53ro1c-StyledTableHeader e1c48y920"
>
  <h2>
    Welcome!
  </h2>
  <div
    class="ui text menu"
  >
    <div
      class="item"
    >
      <a
        data-testid="new-request-button"
        href="/Request/new"
      >
        <button
          class="ui button"
        >
          New Request
        </button>
      </a>
      <h4
        class="hide"
        data-testid="hidden-new-request-button"
      >
        You cannot create more requests until the current request is close.
      </h4>
    </div>
    <div
      class="right item"
    >
      <div
        class="ui toggle checkbox"
      >
        <input
          class="hidden"
          readonly=""
          tabindex="0"
          type="radio"
          value=""
        />
        <label>
          Show All
        </label>
      </div>
    </div>
  </div>
  <p />
  <p
    data-testid="empty-content"
  >
    You do not have any realm requests yet, start a new request.
  </p>
</div>
`;

exports[`Home Component has link to create a new request for reviewer 1`] = `
<div
  class="css-53ro1c-StyledTableHeader e1c48y920"
>
  <h2>
    Welcome!
  </h2>
  <div
    class="ui text menu"
  >
    <div
      class="item"
    >
      <a
        data-testid="new-request-button"
        href="/Request/new"
      >
        <button
          class="ui button"
        >
          New Request
        </button>
      </a>
      <h4
        class="hide"
        data-testid="hidden-new-request-button"
      >
        You cannot create more requests until the current request is close.
      </h4>
    </div>
    <div
      class="right item"
    >
      <div
        class="ui toggle checkbox"
      >
        <input
          class="hidden"
          readonly=""
          tabindex="0"
          type="radio"
          value=""
        />
        <label>
          Show All
        </label>
      </div>
    </div>
  </div>
  <p />
  <div
    class="css-1xulj1-StyledList e11ezbjh0"
  >
    <table
      class="ui selectable striped table"
      data-testid="request-list"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class=""
          >
            Realm Display Name
          </th>
          <th
            class=""
          >
            Realm ID
          </th>
          <th
            class=""
          >
            Status
          </th>
          <th
            class=""
          >
            Requester
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      />
    </table>
  </div>
</div>
`;

exports[`Home Component hide the link to create a new request for Requester when open record exists 1`] = `
<div
  class="css-53ro1c-StyledTableHeader e1c48y920"
>
  <h2>
    Welcome!
  </h2>
  <div
    class="ui text menu"
  >
    <div
      class="item"
    >
      <a
        data-testid="new-request-button"
        href="/Request/new"
      >
        <button
          class="ui button"
        >
          New Request
        </button>
      </a>
      <h4
        class="hide"
        data-testid="hidden-new-request-button"
      >
        You cannot create more requests until the current request is close.
      </h4>
    </div>
    <div
      class="right item"
    >
      <div
        class="ui toggle checkbox"
      >
        <input
          class="hidden"
          readonly=""
          tabindex="0"
          type="radio"
          value=""
        />
        <label>
          Show All
        </label>
      </div>
    </div>
  </div>
  <p />
  <div
    class="css-1xulj1-StyledList e11ezbjh0"
  >
    <table
      class="ui selectable striped table"
      data-testid="request-list"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class=""
          >
            Realm Display Name
          </th>
          <th
            class=""
          >
            Realm ID
          </th>
          <th
            class=""
          >
            Status
          </th>
          <th
            class="hide"
          >
            Requester
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      />
    </table>
  </div>
</div>
`;
